--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>The Premise of a Perfect and loving God -- Ninox Antolihao</title>
+  <title>The Divine Hiddeness -- Ninox Antolihao</title>
 
   <!-- Disclaimer -->
   <meta name="description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
@@ -12,7 +12,7 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="article">
-  <meta property="og:title" content="The Premise of a Perfect and loving God - Solitude Reflections">
+  <meta property="og:title" content="The Hiddeness of God - Solitude Reflections">
   <meta property="og:image" content="devinepremise1.jpg">
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/divine-hiddeness/read.html">
 
@@ -437,7 +437,7 @@
         <ul>
           <li><a href="/reflections/index.html">HOME</a></li>
 
-          <li><a href="/reflections/pages/divine-hiddeness/read.html">Divine Premise</a></li>
+          <li><a href="/reflections/pages/divine-hiddeness/read.html">Divine Hiddeness</a></li>
           <li><a href="/reflections/pages/subconsciousmind/read.html">The Subconscious Mind</a></li>
           <li><a href="/reflections/pages/the-god-we-created/read.html">The God We Created</a></li>
           <li><a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a></li>
@@ -464,7 +464,7 @@
       <div class="ref-header-right">
         <div class="current-page-badge">
           <span class="page-icon">△</span>
-          <span class="page-label">The Divine Premise</span>
+          <span class="page-label">The Divine Hiddeness</span>
         </div>
       </div>
 
@@ -496,7 +496,7 @@
           <div class="playlist">
             <div class="playlist-row active" data-src="/reflections/pages/divine-hiddeness/premiseofgod.mp3">
               <div class="playlist-main">
-                <div class="playlist-title">The Divine Premise</div>
+                <div class="playlist-title">The Divine Hiddeness</div>
                 <div class="playlist-sub">The Primacy of Moral Accountability. A Reflection on Will, Love, and Design.</div>
               </div>
               <div class="playlist-duration">--:--</div>
@@ -504,7 +504,7 @@
 
             <div class="playlist-row" data-src="/reflections/pages/divine-hiddeness/theparadoxofgod.mp3">
               <div class="playlist-main">
-                <div class="playlist-title">Divine Hiddeness</div>
+                <div class="playlist-title">The Paradox of God</div>
                 <div class="playlist-sub">The Ethical Weight of a Flawed Design</div>
               </div>
               <div class="playlist-duration">--:--</div>
