--- a/reflections/pages/subconsciousmind/read.html
+++ b/reflections/pages/subconsciousmind/read.html
@@ -7,11 +7,11 @@
   <title>The Inner Listener — Solitude Reflections · Ninox Antolihao</title>
   <meta name="description" content="How prayer shapes identity — and how the subconscious becomes the quiet receiver of our repeated words." />
 
-  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-inner-listener/read.html" />
+  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/subconsciousmind/read.html" />
   <meta property="og:type" content="article" />
   <meta property="og:title" content="The Inner Listener — Solitude Reflections" />
   <meta property="og:description" content="A reflection on prayer, identity, and the subconscious mind." />
-  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-inner-listener/theinnerlistener.jpg" />
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/subconsciousmind/subconP.PNG" />
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-inner-listener/read.html" />
   <meta name="twitter:card" content="summary_large_image" />
 
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="/reflections/assets/reflections.css?v=1" />
 
   <style>
-    :root{--bg:#1f1815;--paper:#2a211e;--ink:#f3e6dd;--muted:#c9b0a4;--accent:#ffb873;}
+    :root{--bg:#fdfbfa;--paper:#371104;--ink:#f3e6dd;--muted:#c9b0a4;--accent:#ffb873;}
     body{margin:0;background:var(--bg);color:var(--ink);font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;line-height:1.75;}
     main{max-width:900px;margin:0 auto;padding:7.2rem 1rem 3.2rem;}
     .paper{background:var(--paper);border:1px solid rgba(255,255,255,.06);border-radius:16px;padding:1.2rem 1.1rem;box-shadow:0 18px 60px rgba(0,0,0,.45);}
