--- a/reflections/pages/subconsciousmind/read.html
+++ b/reflections/pages/subconsciousmind/read.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <title>The Inner Listener — Solitude Reflections · Ninox Antolihao</title>
+  <title>Subconscious Mind — Solitude Reflections · Ninox Antolihao</title>
   <meta name="description" content="How prayer shapes identity — and how the subconscious becomes the quiet receiver of our repeated words." />
 
   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/subconsciousmind/read.html" />
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="The Inner Listener — Solitude Reflections" />
+  <meta property="og:title" content="The Subconcious Mind — Solitude Reflections" />
   <meta property="og:description" content="A reflection on prayer, identity, and the subconscious mind." />
   <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/subconsciousmind/subconP.PNG" />
-  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-inner-listener/read.html" />
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/subconsciousmind/read.html" />
   <meta name="twitter:card" content="summary_large_image" />
 
   <link rel="icon" href="/reflections/assets/favicon.ico" />
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-  <div id="reflectionsHeader" data-current="the-inner-listener"></div>
+  <div id="reflectionsHeader" data-current="subconsciousmind"></div>
   <section class="audio-wrap" id="audio"></section>
 
   <script>
@@ -41,12 +41,12 @@
       slug: "the-inner-listener",
       title: "The Inner Listener",
       cover: "/reflections/pages/the-inner-listener/theinnerlistener.jpg",
-      url: "https://stonegrillresto.net/reflections/pages/the-inner-listener/read.html"
+      url: "https://stonegrillresto.net/reflections/pages/subconsciousmind/read.html"
     };
 
     // CHANGE ONLY FILENAMES if yours differ
     window.REFLECTION_AUDIO = [
-      { title: "The Inner Listener", src: "/reflections/pages/the-inner-listener/theinnerlistener.mp3" },
+      { title: "The Inner Listener", src: "/reflections/pages/subconsciousmind/subcon.mp3" },
       { title: "The Inner Listener (Short)", src: "/reflections/pages/the-inner-listener/theinnerlistener-short.mp3" }
     ];
   </script>
@@ -55,7 +55,7 @@
 
   <main>
     <article class="paper">
-      <img class="cover" src="/reflections/pages/the-inner-listener/theinnerlistener.jpg" alt="The Inner Listener cover">
+      <img class="cover" src="/reflections/pages/subconsciousmind.jpg" alt="The Inner Listener cover">
 
       <h1>The Inner Listener</h1>
       <div class="subtitle">
