--- a/reflections/index.html
+++ b/reflections/index.html
@@ -69,7 +69,7 @@
 
 
       <!-- =========================================
-           1) CARD: DIVINE PREMISE
+           1) CARD: morsl choice
            ========================================= -->
       <article class="card">
         <div class="left">
@@ -128,7 +128,7 @@
           <section class="audio-wrap" id="audioMount-subconsciousmind">
             <p class="label">🎧 Audio Reflection: <strong>The Subconscious Mind</strong></p>
             <audio controls preload="auto" style="width:100%">
-              <source src="/reflections/pages/subconsciousmind/subconn.mp3" type="audio/mpeg">
+              <source src="/reflections/pages/subconsciousmind/subcon.mp3" type="audio/mpeg">
               Your browser does not support the audio element.
             </audio>
           </section>
