--- a/reflections/index.html
+++ b/reflections/index.html
@@ -117,7 +117,7 @@
             </a>
           </h3>
 
-          <p>The silent architect of your identity — where prayer, memory, and desire shape who you become.</p>
+          <p>The silent architect of your identity.</p>
 
           <p class="meta">
             First Edition 2025
