--- a/reflections/index.html
+++ b/reflections/index.html
@@ -27,7 +27,7 @@
   <header class="site-header">
     <img src="/reflections/IMG_0690.png" alt="Stone Grill Logo">
     <h1>SOLITUDE</h1>
-    <p class="tag">The Inner Kingdom of Faith, Mind and Light</p>
+    <p class="tag">These thoughts are personal reflections — not doctrine, not instruction, not authority. If there is one sacred sentence here, it is simply: “I do not know — but I am listening</p>
   </header>
 
 <div class="hero">
