--- a/reflections/index.html
+++ b/reflections/index.html
@@ -254,6 +254,7 @@
             </audio>
     </section>
     
+    
           <div class="share-group"
                data-share-url="https://stonegrillresto.net/reflections/pages/transcendence/read.html"
                data-share-title="TRANSCENDENCE — Unraveling the Enigma of Absolute Truth"></div>
@@ -449,6 +450,13 @@ began to bind it.</p>
           <script>
             document.write(createAudioPlayer('/reflections/pages/question-label-sinner/labeled-sinner.mp3', 'labeled sinner'));
           </script>
+          <section class="audio-wrap" id="audioMount-divinepremise">
+            <p class="label">🎧 play to Listen the devine premise</p>
+            <audio controls preload="auto" style="width:100%">
+              <source src="/reflections/pages/divine-hiddeness/premiseofgod.mp3" type="audio/mpeg">
+              Your browser does not support the audio element.
+            </audio>
+        </section>
         </div>
       </article>
 
