--- a/reflections/index.html
+++ b/reflections/index.html
@@ -245,6 +245,7 @@
           <h3><a class="title-link" href="/reflections/pages/the-inner-listener/read.html" target="_blank" rel="noopener">The Inner Listener</a></h3>
           <p>How Prayer Shapes Our Identity.</p>
           <p class="meta">First Edition 2025 • <a class="title-link" href="/reflections/pages/the-paradox-of-god/The_Paradox_of_God.pdf" target="_blank" rel="noopener">PDF</a></p>
+          </div>
       <section class="audio-wrap" id="audioMount-prayer">
             <p class="label">🎧 Audio Reflection: <strong>The Inner Listener</strong></p>
             <audio controls preload="auto" style="width:100%">
