--- a/reflections/index.html
+++ b/reflections/index.html
@@ -130,7 +130,7 @@
         <!-- =========================================
            12) CARD: THE SUBCONSCIOUS MIND
            ========================================= -->
-      <article class="card">
+      <article class="card" id="subconsciousmind">
         <div class="left">
           <a class="book-link" href="/reflections/pages/subconsciousmind/read.html" rel="noopener">
             <img class="book-cover"
