--- a/reflections/index.html
+++ b/reflections/index.html
@@ -215,13 +215,34 @@
           <h3><a class="title-link" href="/reflections/pages/the-paradox-of-god/read.html" target="_blank" rel="noopener">The God Paradox of God</a></h3>
           <p>to those who seek truth, even when silence is the only answer.</p>
           <p class="meta">First Edition 2025 • <a class="title-link" href="/reflections/pages/the-paradox-of-god/The_Paradox_of_God.pdf" target="_blank" rel="noopener">PDF</a></p>
-      <section class="audio-wrap" id="audioMount-paradox of god">
-            <p class="label">🎧 Audio Reflection: <strong>The Paradox of God</strong></p>
-            <audio controls preload="auto" style="width:100%">
-              <source src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3" type="audio/mpeg">
-              Your browser does not support the audio element.
-            </audio>
-    </section>
+     
+      <!-- ✅ AUDIO BELOW COVER (BUILT-IN) -->
+      <section class="audio-wrap" id="audio">
+        <audio id="reflectionAudio" controls preload="metadata">
+          <source id="audioSource" src="" type="audio/mpeg">
+          Your browser does not support the audio element.
+        </audio>
+
+        <div class="playlist" id="playlist">
+          <div class="playlist-row active"
+               data-src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3">
+            <div class="playlist-main">
+              <div class="playlist-title">The Paradox of God</div>
+              <div class="playlist-sub">Full</div>
+            </div>
+            <div class="playlist-duration">--:--</div>
+          </div>
+
+          <div class="playlist-row"
+               data-src="/reflections/pages/the-paradox-of-god/paradoxofgod.mp3">
+            <div class="playlist-main">
+              <div class="playlist-title">Paradox of God (Short)</div>
+              <div class="playlist-sub">Short</div>
+            </div>
+            <div class="playlist-duration">--:--</div>
+          </div>
+        </div>
+      </section>
           
           <div class="share-group"
                data-share-url="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html"
