--- a/reflections/index.html
+++ b/reflections/index.html
@@ -34,6 +34,21 @@
   Tap a <strong>title</strong> to read the reflection, use the <strong>audio player</strong> to listen, and <strong>share</strong> any piece that speaks to you.
 </div>
 
+  <!-- ==============================
+     GLOBAL AUDIO PLAYER (ONE ONLY)
+     ============================== -->
+<section class="audio-wrap global-player" id="globalPlayer">
+  <p class="label">
+    🎧 <strong>Audio Reflection</strong>
+    <span id="nowPlaying" style="opacity:.75">— select a track below</span>
+  </p>
+
+  <audio id="globalAudio" controls preload="metadata" style="width:100%">
+    <source id="globalSource" src="" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+</section>
+
   <!-- MAIN CONTENT -->
   <main class="wrap">
     <section class="grid">
@@ -83,13 +98,19 @@
         <div class="right">
           <h3><a class="title-link" href="/reflections/pages/divine-hiddeness/read.html" target="_blank" rel="noopener">THE DIVINE PREMISE</a></h3>
           <p>the premise of a perfect living God. </p>
-        <section class="audio-wrap" id="audioMount-divinepremise">
-            <p class="label">🎧 play to Listen the devine premise</p>
-            <audio controls preload="auto" style="width:100%">
-              <source src="/reflections/pages/divine-hiddeness/premiseofgod.mp3" type="audio/mpeg">
-              Your browser does not support the audio element.
-            </audio>
-        </section>
+       <div class="playlist">
+  <button class="track-link" type="button"
+          data-src="/reflections/pages/divine-hiddeness/premiseofgod.mp3"
+          data-title="premise of god)">
+    ▶ Divine premise (Full)
+  </button>
+
+  <button class="track-link" type="button"
+          data-src="/reflections/pages/the-god-we-created/the-gods-we-create.mp3"
+          data-title="The divine Premise (Short)">
+    ▶ The God We Created (Short)
+  </button>
+</div>
           
           <div class="share-group"
                data-share-url="https://stonegrillresto.net/reflections/pages/divine-hiddeness/read.html"
