--- a/reflections/index.html
+++ b/reflections/index.html
@@ -92,7 +92,7 @@
                data-share-title="The Mirror of Worship — Ninox Antolihao"></div>
 
           <section class="audio-wrap" id="audioMount-mirror-of-worship">
-            <p class="label">🎧 Audio Reflection: <strong>The Diety</strong></p>
+            <p class="label">🎧 click to Listen <strong>The Diety</strong></p>
             <audio controls preload="auto" style="width:100%">
               <source src="/reflections/pages/mirror-of-worship/themirrorofworship.mp3" type="audio/mpeg">
               Your browser does not support the audio element.
@@ -144,7 +144,7 @@
       </article>
 
       <!-- =========================================
-           1) CARD: morsl choice
+           1) CARD: moral choice
            ========================================= -->
       <article class="card">
         <div class="left">
@@ -204,8 +204,8 @@
           <p class="meta">First Edition 2025</p>
 
           <section class="audio-wrap" id="audioMount-subconsciousmind">
-            <p class="label">🎧 Audio Reflection: <strong>The Subconscious Mind</strong></p>
-            <audio controls preload="auto" style="width:100%">
+            <p class="label">🎧Now Playing: <strong>The Subconscious Mind</strong></p>
+            <audio controls preload="auto" style="width:100%"> 
               <source src="/reflections/pages/subconsciousmind/subcon.mp3" type="audio/mpeg">
               Your browser does not support the audio element.
             </audio>
