Add header section to read.html

--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -232,6 +232,8 @@
 
 <body>
   <!-- UNIFIED HEADER MOUNT -->
+  <header class="ref-header">
+    <div class="ref-header-inner">
   <div id="reflectionsHeader" data-current="the-paradox-of-god"></div>
 
   <main>
