--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -82,7 +82,308 @@
       border-top:1px solid rgba(255,255,255,.10);
       margin:1.25rem 0;
     }
+ /* =========================
+       GLOBAL FIXED HEADER
+    ========================== */
+    .ref-header{
+      position: fixed;
+      top: 0; left: 0; right: 0;
+      z-index: 1000;
+      background: #1f1815;
+      border-bottom: 2px solid rgba(255,255,255,0.06);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.35);
+    }
 
+    .ref-header-inner{
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 0.8rem 1rem;
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+    }
+
+    /* Left cluster */
+    .ref-header-left{
+      display:flex;
+      flex-direction:column;
+      align-items:flex-start;
+      gap:0.35rem;
+      flex-shrink:0;
+    }
+
+    .brand-link{
+      display:flex;
+      align-items:center;
+      gap:0.55rem;
+      text-decoration:none;
+    }
+
+    .brand-logo{
+      width:40px;
+      height:40px;
+      border-radius:50%;
+      object-fit:cover;
+      box-shadow:0 0 8px rgba(0,0,0,0.6);
+      flex-shrink:0;
+    }
+
+    .brand-text{
+      display:flex;
+      flex-direction:column;
+      line-height:1.1;
+    }
+
+    .brand-title{
+      font-size:0.9rem;
+      font-weight:600;
+      letter-spacing:0.04em;
+      text-transform:uppercase;
+      color:#ffffff;
+    }
+
+    .brand-subtitle{
+      font-size:0.7rem;
+      color:#f0e0d0;
+      opacity:0.8;
+    }
+
+    /* Under-logo actions */
+    .header-actions{
+      display:flex;
+      align-items:center;
+      gap:0.5rem;
+    }
+
+    /* Hamburger button (NOW visible on desktop + mobile) */
+    .nav-toggle{
+      display:inline-flex;  /* ✅ show on desktop too */
+      align-items:center;
+      justify-content:center;
+
+      border: 1px solid rgba(255,255,255,0.18);
+      background: rgba(255,255,255,0.06);
+      border-radius:999px;
+      padding: 0.25rem 0.6rem;
+      font-size: 1rem;
+      color: #e8d9c5;
+      cursor: pointer;
+      transition: background 0.2s ease, border-color 0.2s ease, transform 0.15s ease;
+    }
+
+    .ref-header.nav-open .nav-toggle{
+      background: rgba(255,107,61,0.12);
+      border-color: rgba(255,107,61,0.45);
+      transform: translateY(0.2px);
+    }
+
+    /* Local buttons */
+    .nav-buttons{
+      display:flex;
+      gap:0.4rem;
+      flex-wrap:wrap;
+    }
+
+    .nav-buttons button{
+      background:#26201c;
+      color:#fff;
+      border:1px solid rgba(255,255,255,0.2);
+      padding:4px 10px;
+      border-radius:999px;
+      font-size:0.75rem;
+      cursor:pointer;
+      white-space:nowrap;
+    }
+
+    .nav-buttons button:hover{
+      background:#ff6b3d;
+      border-color:#ff6b3d;
+      color:#1f1815;
+    }
+
+    /* =========================
+       DESKTOP NAV (INLINE LINKS)
+       ✅ This is what was missing before
+    ========================== */
+    .ref-nav{
+      flex: 1;
+      min-width: 0;
+    }
+
+    .ref-nav ul{
+      display:flex;
+      gap:0.75rem;
+      list-style:none;
+      padding:0;
+      margin:0;
+      flex-wrap:wrap;         /* ✅ makes "all visible" by wrapping to multiple lines */
+      align-items:center;
+    }
+
+    .ref-nav a{
+      display:inline-flex;
+      align-items:center;
+      padding:0.35rem 0.7rem;
+      border-radius:999px;
+      font-size:0.8rem;
+      text-decoration:none;
+      color:#f3e4d5;
+      border:1px solid transparent;
+      white-space:nowrap;
+      transition: background 0.2s ease, color 0.2s ease, border-color 0.2s ease;
+    }
+
+    .ref-nav a:hover{
+      background: rgba(255,107,61,0.14);
+      border-color: rgba(255,107,61,0.4);
+    }
+
+    .ref-nav a.active{
+      background:#fca286;
+      color:#592f1d;
+      border-color:#ff6b3d;
+      font-weight:600;
+    }
+
+    /* Right side badge */
+    .ref-header-right{
+      display:flex;
+      align-items:center;
+      gap:0.75rem;
+      flex-shrink:0;
+    }
+
+    .current-page-badge{
+      display:inline-flex;
+      align-items:center;
+      gap:0.4rem;
+      padding:0.3rem 0.7rem;
+      border-radius:999px;
+      background: rgba(255,255,255,0.05);
+      border:1px solid rgba(255,255,255,0.15);
+      font-size:0.75rem;
+      color:#f7e9dd;
+      white-space:nowrap;
+    }
+
+    .page-icon{
+      font-size:0.85rem;
+      color:#ffb347;
+    }
+
+    /* Main layout */
+    .page-content{
+      max-width:1100px;
+      margin:0 auto;
+      padding: 6.6rem 1rem 2rem;
+    }
+
+    /* Overlay (NOW clickable to close menu) */
+    .nav-overlay{
+      position:fixed;
+      inset:0;
+      background: rgba(0,0,0,0.20);
+      z-index: 500;
+      opacity:0;
+      pointer-events:none;
+      transition: opacity 0.25s ease;
+    }
+
+    .ref-header.nav-open .nav-overlay{
+      opacity:0.6;
+      pointer-events:auto;   /* ✅ clickable */
+    }
+
+    /* =========================
+       RESPONSIVE
+    ========================== */
+    @media (max-width: 900px){
+      .brand-subtitle{ display:none; }
+      .current-page-badge{ display:none; }
+      .ref-nav a{ padding:0.25rem 0.55rem; font-size:0.75rem; }
+    }
+
+    @media (max-width: 768px){
+      .ref-header-inner{
+        flex-wrap:nowrap;
+        align-items:flex-start;
+      }
+
+      /* MOBILE dropdown panel (still uses SAME nav list) */
+      .ref-nav{
+        position: fixed;
+        top: 64px;
+        left: 0;
+        right: 0;
+        background: rgba(31,24,21,0.96);
+        border-bottom: 1px solid rgba(255,255,255,0.08);
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.25s ease;
+        z-index: 900;
+        padding: 0;
+      }
+
+      .ref-nav ul{
+        flex-direction: column;
+        padding: 0.15rem 1rem 1rem;
+        gap: 0.35rem;
+        flex-wrap: nowrap;
+        align-items: stretch;
+      }
+
+      .ref-nav a{
+        width:100%;
+        justify-content:flex-start;
+        white-space: normal;
+      }
+
+      /* ✅ OPEN STATE */
+      .ref-header.nav-open .ref-nav{
+        max-height: calc(100vh - 64px); /* ✅ scrollable if many links */
+        overflow-y: auto;
+        -webkit-overflow-scrolling: touch;
+      }
+
+      .page-content{
+        padding-top: 7.6rem;
+      }
+    }
+
+    /* =========================
+       PAGE-SPECIFIC STYLES
+    ========================== */
+    .content{
+      padding:0 0 2rem 0;
+      max-width:800px;
+      margin-left:auto;
+      margin-right:auto;
+      line-height:1.65;
+      font-size:17px;
+    }
+
+    .scrolling-subtitle{
+      width:100%;
+      overflow:hidden;
+      white-space:nowrap;
+      position:relative;
+      margin-top:6px;
+      color:#444;
+      font-size:14px;
+    }
+
+    .scrolling-subtitle span{
+      display:inline-block;
+      animation:smoothScroll 18s linear infinite;
+    }
+
+    @keyframes smoothScroll{
+      0%{ transform: translateX(100%); }
+      30%{ transform: translateX(0); }
+      100%{ transform: translateX(-100%); }
+    }
+
+    
     /* ============================================================
        ✅ AUDIO (BUILT-IN, RELIABLE)
     ============================================================ */
